--- a/Press.html
+++ b/Press.html
@@ -142,7 +142,7 @@
             padding-left: 15px;
             margin-left: 15px;
             float: right; ">
-        <img src="C:\Users\utilisateur\Downloads\Entretien.jpg" width="50%" height="50%" >
+        <img src="Entretien.jpg" width="50%" height="50%" >
             
         
             <div>
