--- a/Menu.html
+++ b/Menu.html
@@ -118,12 +118,12 @@
                <ul class="nav">   
                     <li><a href="#" ><b> FROMAGE IBARISSEN</b></a></li>
         
-                    <li><a href="C:\Users\utilisateur\Desktop\Type script\TypeScript\HTML\Acceuil.html">Acceuil</a></li>
+                    <li><a href="Acceuil.html">Acceuil</a></li>
                     <li><a href="#">Menu</a></li>
-                    <li><a href="C:\Users\utilisateur\Desktop\Type script\TypeScript\HTML\Recettes.html">Recettes</a></li>
-                    <li><a href="C:\Users\utilisateur\Desktop\Type script\TypeScript\HTML\Press.html">Press</a></li>
+                    <li><a href="Recettes.html">Recettes</a></li>
+                    <li><a href="Press.html">Press</a></li>
                     <!---
-                    <li><a href="C:\Users\utilisateur\Desktop\Type script\TypeScript\HTML\Contact.html">Contact</a></li>
+                    <li><a href="Contact.html">Contact</a></li>
                     -->
                 </ul>
             </header>
