--- a/Press.html
+++ b/Press.html
@@ -127,12 +127,12 @@
                <ul class="nav">   
                     <li><a href="#" ><b> FROMAGE IBARISSEN</b></a></li>
         
-                    <li><a href="C:\Users\utilisateur\Desktop\Type script\TypeScript\HTML\Acceuil.html">Acceuil</a></li>
-                    <li><a href="C:\Users\utilisateur\Desktop\Type script\TypeScript\HTML\Menu.html">Menu</a></li>
-                    <li><a href="C:\Users\utilisateur\Desktop\Type script\TypeScript\HTML\Recettes.html">Recettes</a></li>
+                    <li><a href="Acceuil.html">Acceuil</a></li>
+                    <li><a href="Menu.html">Menu</a></li>
+                    <li><a href="Recettes.html">Recettes</a></li>
                     <li><a href="#">Press</a></li>
                     <!---
-                    <li><a href="C:\Users\utilisateur\Desktop\Type script\TypeScript\HTML\Contact.html">Contact</a></li>
+                    <li><a href="Contact.html">Contact</a></li>
                     -->
                 </ul>
             </header>
