--- a/Recettes.html
+++ b/Recettes.html
@@ -117,12 +117,12 @@
                <ul class="nav">   
                     <li><a href="#" ><b> FROMAGE IBARISSEN</b></a></li>
         
-                    <li><a href="C:\Users\utilisateur\Desktop\Type script\TypeScript\HTML\Acceuil.html">Acceuil</a></li>
-                    <li><a href="C:\Users\utilisateur\Desktop\Type script\TypeScript\HTML\Menu.html">Menu</a></li>
+                    <li><a href="Acceuil.html">Acceuil</a></li>
+                    <li><a href="Menu.html">Menu</a></li>
                     <li><a href="#">Recettes</a></li>
-                    <li><a href="C:\Users\utilisateur\Desktop\Type script\TypeScript\HTML\Press.html">Press</a></li>
+                    <li><a href="Press.html">Press</a></li>
                     <!---
-                    <li><a href="C:\Users\utilisateur\Desktop\Type script\TypeScript\HTML\Contact.html">Contact</a></li>
+                    <li><a href="Contact.html">Contact</a></li>
                     -->
                 </ul>
             </header>
