--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
                 font-family: Georgia, 'Times New Roman', Times, serif; left: 20px"> FROMAGE IBARISSEN</b></a></li>
 
                     <li><a href="#">Acceuil</a></li>
-                    <li><a href="C:\Users\utilisateur\Desktop\Type script\TypeScript\HTML\Menu.html">Menu</a></li>
-                    <li><a href="C:\Users\utilisateur\Desktop\Type script\TypeScript\HTML\Reccettes.html">Recettes</a></li>
-                    <li><a href="C:\Users\utilisateur\Desktop\Type script\TypeScript\HTML\Press.html">Press</a></li>
+                    <li><a href="Menu.html">Menu</a></li>
+                    <li><a href="Reccettes.html">Recettes</a></li>
+                    <li><a href="Press.html">Press</a></li>
                     <!---
                     <li><a href="C:\Users\utilisateur\Desktop\Type script\TypeScript\HTML\Contact.html">Contact</a></li>
                     -->
