--- a/Recettes.html
+++ b/Recettes.html
@@ -117,7 +117,7 @@
                <ul class="nav">   
                     <li><a href="#" ><b> FROMAGE IBARISSEN</b></a></li>
         
-                    <li><a href="Acceuil.html">Acceuil</a></li>
+                    <li><a href="index.html">Acceuil</a></li>
                     <li><a href="Menu.html">Menu</a></li>
                     <li><a href="#">Recettes</a></li>
                     <li><a href="Press.html">Press</a></li>
