--- a/Press.html
+++ b/Press.html
@@ -127,7 +127,7 @@
                <ul class="nav">   
                     <li><a href="#" ><b> FROMAGE IBARISSEN</b></a></li>
         
-                    <li><a href="Acceuil.html">Acceuil</a></li>
+                    <li><a href="index.html">Acceuil</a></li>
                     <li><a href="Menu.html">Menu</a></li>
                     <li><a href="Recettes.html">Recettes</a></li>
                     <li><a href="#">Press</a></li>
