--- a/Menu.html
+++ b/Menu.html
@@ -118,7 +118,7 @@
                <ul class="nav">   
                     <li><a href="#" ><b> FROMAGE IBARISSEN</b></a></li>
         
-                    <li><a href="Acceuil.html">Acceuil</a></li>
+                    <li><a href="index.html">Acceuil</a></li>
                     <li><a href="#">Menu</a></li>
                     <li><a href="Recettes.html">Recettes</a></li>
                     <li><a href="Press.html">Press</a></li>
