--- a/Menu.html
+++ b/Menu.html
@@ -63,6 +63,7 @@
                 width: 100%;
             }
             body{
+                margin: 0cm
                 width: 100%;
                 height:  100%;
                 
