--- a/Recettes.html
+++ b/Recettes.html
@@ -59,10 +59,9 @@
             }*/
             
             body{
+                margin: 0cm;
                 width: 100%;
                 height: 100%;
-                size: 100% 100%;
-                position: top;
             }
             
             .nav{
