--- a/Press.html
+++ b/Press.html
@@ -47,6 +47,7 @@
                 width: 100%;
             }
             body{
+                margin: 0cm;
                 width: 100%;
                 height:  100%;
                 
