--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
                 height: 100%;
             }
             body{
+                margin: 0cm;
                 width: 100%;
                 background-image: url("https://www.bejaia-guidedepoche.com/images/logos_pub/2537/fromage-ibarissen.jpg");
                 background-size: cover;
