--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
             body{
                 margin: 0cm;
                 width: 100%;
+                height: 100%;
                 background-image: url("https://www.bejaia-guidedepoche.com/images/logos_pub/2537/fromage-ibarissen.jpg");
                 background-size: cover;
                 background-repeat: no-repeat;
