--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
     <head>
         <meta charset="UTF_8">
-        <meta name="viewport" content="width = device-width, initial-scale = 1"/>
-        <meta http-equiv="X-UA-Compatible" content="ie=edge"
+        <meta name="viewport" content="width = device-width, initial-scale = 1">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title></title>
         <style>
             p{
