--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title></title>
         <style>
+            @media all and (max-width: 700px) {
+
+                header {
+                    height: 90px; * Earlier 120px*/
+                    line-height: 90px; * Earlier 120px*/
+                }
+            }
             p{
                 color : rgb(246, 246, 246);
                 font-size: 20px;
