--- a/index.html
+++ b/index.html
@@ -6,13 +6,18 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title></title>
         <style>
-            @media all and (max-width: 700px) {
+            @media all and (max-width: 500px) {
 
                 header {
-                    height: 90px; * Earlier 120px*/
-                    line-height: 90px; * Earlier 120px*/
+                    height: 70px;
+                    line-height: 70px;
                 }
+            
+                    header span {
+                        font-size: 16px;
+                    }
             }
+            
             p{
                 color : rgb(246, 246, 246);
                 font-size: 20px;
