--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
             @media all and (max-width: 500px) {
 
                 header {
-                    height: 70px;
-                    line-height: 70px;
+                    height: 20px;
+                    line-height: 20px;
+                    font-size: 16px;
                 }
             
                     header span {
