--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title></title>
         <style>
-            @media all and (max-width: 500px) {
+            @media all and (max-width: 00px) {
 
                 header {
-                    height: 20px;
+                    height: 402,0px;
                     line-height: 20px;
                     font-size: 16px;
                 }
@@ -17,6 +17,7 @@
                     header span {
                         font-size: 16px;
                     }
+                nav  {font-size: 16px;}
             }
             
             p{
