--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             padding-left: 15px;
             margin-left: 15px;
             float: right; ">
-        <img src="fromage ibarissen thaghat.jpg" width="50%" height="50%" >
+        <img src="IbarissenThaghat.jpg" width="50%" height="50%" >
                     
                 <!--<p >   plus prcisément en plein coeur de béjaia.</p> -->
                 <!--<p > Vous pouvez trouver ici la grande histoire du Camembert Ibarissen, qui vient dun petit village en algerie,
