--- a/Menu.html
+++ b/Menu.html
@@ -113,7 +113,7 @@
     <body>
         
         <div>
-            <img src="https://www.bejaia-guidedepoche.com/images/logos_pub/2537/fromage-ibarissen.jpg" width="100%";>
+            <img src="IbarissenProduits.jpg" width="100%";>
             <header>
                 
                <ul class="nav">   
