--- a/Menu.html
+++ b/Menu.html
@@ -138,10 +138,11 @@
         </div>
         <main style="color: black;"> 
             <article>
-                <h2>Notre gamme de produits</h2>
+              <!--  <h2>Notre gamme de produits</h2>
                 <h4>Notre fromagerie propose actuellement les  produits suivants : camembert,  brie,   frais à l’ail et au persil…</h4>
                 On aime partager avec vous du bon fromage. On compte aujourd'huie 8 ans d'expérience et de passions du fromage,
                 avec des recettes incontournables préparées avec nos soins.
+                -->
             </article>
         </main>
         <footer> 
