--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title></title>
         <style>
-            @media all and (max-width: 400px) {
+            @media all and (max-width: 00px) {
 
                 header {
                     height: 40px;
@@ -88,6 +88,7 @@
                 position: fixed;
                 top: 0;
                 width: 100%;
+                hight: 10%;
                 padding: 0px;
                 background-color: rgba(0, 0,0, 0.43);
                 list-style-type: none;
@@ -101,11 +102,7 @@
                 margin-right: auto;
                 width: 1024px;
             }
-            /*a{  
-                display: inline-block;
-                color:rgb(234, 243, 237);
-                font-family: Arial, Helvetica, sans-serif;
-            }*/
+           
             .nav a:hover, a:active{
                 display: inline-block;
                 font-family: Arial, Helvetica, sans-serif;
