--- a/index.html
+++ b/index.html
@@ -109,16 +109,16 @@
                 color: white;
             }
             .nav li{
-                /*padding-block-start: 20px;*/
-                padding-block: 20px;
+                padding-block: 20%;
                 display: inline-block;
                 text-decoration:none;
-                font-size: 20px;
-                padding-left: 20px;
-                padding-right: 20px;
+                font-size: 20%;
+                padding-left: 20%;
+                padding-right: 20%;
             }
              .center {
                   display: block;
+                  margin-top: auto;
                   margin-left: auto;
                   margin-right: auto;
                   width: 50%;
