--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 
                 <ul class="nav">   
                     <li><a href="#" ><b  style="font-size: x-large; font-style: normal;font-weight: bold;
-                font-family: Georgia, 'Times New Roman', Times, serif; left: 20px"> FROMAGE IBARISSEN</b></a></li>
+                font-family: Georgia, 'Times New Roman', Times, serif; left: 5%; font-size: 5%"> FROMAGE IBARISSEN</b></a></li>
 
                     <li><a href="#">Acceuil</a></li>
                     <li><a href="Menu.html">Menu</a></li>
