--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 color: white;
             }
             .nav li{
-                padding-block: 5%;
+                padding-block: 5% 10%;
                 display: inline-block;
                 text-decoration:none;
                 font-size: 5%;
