--- a/index.html
+++ b/index.html
@@ -92,12 +92,10 @@
                 color: white;
             }
             .nav li{
-                /*padding-block: 5% 10%;*/
+                padding-block: 20px;
                 display: inline-block;
                 text-decoration:none;
                 font-size: 5%;
-                padding-left: 5%;
-                padding-right: 5%;
             }
              .center {
                   display: block;
