--- a/index.html
+++ b/index.html
@@ -122,16 +122,12 @@
             <header> 
                 
                 <ul class="nav">   
-                    <li><a href="#" ><b  style="font-size: x-large; font-style: normal;font-weight: bold;
-                font-family: Georgia, 'Times New Roman', Times, serif; left: 5%; font-size: 5%"> FROMAGE IBARISSEN</b></a></li>
+                    <li><a href="#" ><b  style=" left: 5px"> FROMAGE IBARISSEN</b></a></li>
 
                     <li><a href="#">Acceuil</a></li>
                     <li><a href="Menu.html">Menu</a></li>
                     <li><a href="Reccettes.html">Recettes</a></li>
                     <li><a href="Press.html">Press</a></li>
-                    <!---
-                    <li><a href="C:\Users\utilisateur\Desktop\Type script\TypeScript\HTML\Contact.html">Contact</a></li>
-                    -->
                 </ul>
 
                 
