--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <header> 
                 
                 <ul class="nav">   
-                    <li><a href="#" ><b  style=" left: 5px"> FROMAGE IBARISSEN</b></a></li>
+                    <li><a href="#" ><b"> FROMAGE IBARISSEN</b></a></li>
 
                     <li><a href="#">Acceuil</a></li>
                     <li><a href="Menu.html">Menu</a></li>
