--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
                 list-style-type: none;
                 text-align: center;
                 margin: 0;
+                padding: 0;
+
                 
             }
            
