--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
             }
             .nav li{
                padding-block-start: 20px;
+                padding-block-end: 20px;
                 padding-block: 20px;
                 display: inline-block;
                 text-decoration:none;
