--- a/index.html
+++ b/index.html
@@ -100,25 +100,14 @@
                   hight: 50%;
                 }
 
-              @media all and (max-width: 400px) {
+               @media all and (max-width: 450px) {
 
                 .nav li{
-                padding-block: 20px;
+                padding-block: 3%;
                 display: inline-block;
                 text-decoration:none;
-                font-size: 5%;
-            }
-                  header {
-                    height: 40px;
-                    line-height: 20px;
-                    font-size: 16px;
+                font-size: 18%;
                 }
-            
-                    header span {
-                        font-size: 16px;
-                    }
-                nav  {font-size: 16px;}
-                
             }
         </style>
     </head>
