--- a/index.html
+++ b/index.html
@@ -106,7 +106,9 @@
                 padding-block: 3%;
                 display: inline-block;
                 text-decoration:none;
-                font-size: 18%;
+                font-size: 18,008%;
+                padding-left: 2%;
+                padding-right: 2%;
                 }
             }
         </style>
