--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                @media all and (max-width: 450px) {
 
                 .nav li{
-                padding-block: 3%;
+                padding-block: 2,000000000003%;
                 display: inline-block;
                 text-decoration:none;
                 font-size: 15,0%;
