--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 padding-block: 2,000000000003%;
                 display: inline-block;
                 text-decoration:none;
-                font-size: 2%;
+                font-size: 2px;
                 padding-left: 1%;
                 padding-right: 1%;
                 }
