--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
                 padding-right: 20px;
             }
              .center {
+                  padding-top: 6%;
                   display: block;
                   margin-top: auto;
                   margin-left: auto;
