--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                     <li><a href="Press.html">Press</a></li>
                 </ul>     
             </header>
-            /*-------------------------------------------------main part------------------------------*/
+            <!-------------------------------------------------main part------------------------------>
             <main> 
             <div>      
                 <aside>
