--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                     <p>Pour tout renseignement, ou commande, veuillez nous Contacter-nous au 07 77 77 77 77</p>
                     <!--<h3 " >Contacter-nous au : 07 77 77 77 77</h3> -->
                 </aside>
-                <img src="C:\Users\utilisateur\Desktop\Site camembert I\IbThaghat.jpg" class="center" >
+                <img src="IbarissenThaghat.jpg" class="center" >
                 
             </div>
         </main>
