--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
             }
             
             section li{
-                color :rgb(238, 239, 232);
+                color :black;
             }
 
            a:link{
                 text-decoration:dotted;
-                color:rgb(236, 239, 238);
+                color:black;
                 display: block;
             }
             a:visited{
                 text-decoration: dashed;
-                color:rgb(240, 244, 243);
+                color:black;
             }
             
             /*header li{
