--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             .nav a:hover, a:active{
                 display: inline-block;
                 font-family: Arial, Helvetica, sans-serif;
-                color: white;
+                color: black;
             }
             .nav li{
                 
