--- a/index.html
+++ b/index.html
@@ -163,11 +163,10 @@
                     Notre bonheur consiste a  partager avec vous du bon fromage. On compte aujourd'huie plus de 10 ans damour et de passions pour le fromage,
                     on vous a egalement concoctes des recettes incontournables préparées avec nos deliceux fromages.
                     <br>
-                    </p>
-                    <p>Pour tout renseignement, ou commande, veuillez nous Contacter-nous au 07 77 77 77 77</p>
-                    <!--<h3 " >Contacter-nous au : 07 77 77 77 77</h3> -->
+                    </p>                   
                 </aside>
                 <img src="IbarissenThaghat.jpg" class="center" >
+                <p style="font-size: 10px;">Pour tout renseignement, ou commande, veuillez nous Contacter au 07 77 77 77 77</p>
                 
             </div>
         </main>
