--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                     </p>                   
                 </aside>
                 <img src="IbarissenThaghat.jpg" class="center" >
-                <p style="font-size: 10px;">Pour tout renseignement, ou commande, veuillez nous Contacter au 07 77 77 77 77</p>
+                <p>Pour tout renseignement, ou commande, veuillez nous Contacter au 07 77 77 77 77</p>
                 
             </div>
         </main>
