--- a/Press.html
+++ b/Press.html
@@ -88,7 +88,7 @@
                   width: 50%;
                 }
             aside { 
-                    padding-top: 6%;
+                    padding-top: 9%;
                     width: 45%;
                     padding-left: 0.3rem;
                     margin-left: 0.3rem;
@@ -96,6 +96,9 @@
                     float: right;
                     /*box-shadow: inset 5px 0 5px -5px #29627e; */
                     color: black;
+            }
+            img {
+                width : 40%
             }
 
          @media all and (max-width: 450px) {
@@ -126,6 +129,10 @@
                   margin-top: 3%;
                   width:  53%;
                 }
+                img {
+                padding-top: 8%
+                width : 40%
+                }
          }
         </style>
     </head>
@@ -148,7 +155,7 @@
         </div>
         <main style="text-align: center;">
             <div>
-                <img src="Entretien.jpg" width="40%" >
+                <img src="Entretien.jpg" >
                 
             
                 <div  style= "text-align: center; " >
