--- a/Press.html
+++ b/Press.html
@@ -130,7 +130,7 @@
                   width:  53%;
                 }
                 img {
-                padding-top: 8%
+                margin-top: 8%
                 width : 40%
                 }
          }
