--- a/Press.html
+++ b/Press.html
@@ -130,8 +130,8 @@
                   width:  53%;
                 }
                 img {
-                margin-top: 8%
-                width : 40%
+                margin-top: 58px
+                width : 90px
                 }
          }
         </style>
@@ -155,7 +155,7 @@
         </div>
         <main style="text-align: center;">
             <div>
-                <img src="Entretien.jpg" >
+                <img src="Entretien.jpg">
                 
             
                 <div  style= "text-align: center; " >
