--- a/Press.html
+++ b/Press.html
@@ -154,8 +154,9 @@
             </header>
         </div>
         <main style="text-align: center;">
-            <div>
+            <div style="margin-top: 9%">
                 <img src="Entretien.jpg">
+            </div>
                 
             
                 <div  style= "text-align: center; " >
