--- a/index.html
+++ b/index.html
@@ -159,14 +159,16 @@
                         Le fromage Ibarissen a ete fabrique dans les hautes montagnes dalgerie, plus exactement la montagne ibarissen dou son nom, avec du lait de vache et de chevre collectes dans la region.
                     </p>
 
-                    <p>
+                                     
+                </aside>
+                <img src="IbarissenThaghat.jpg" class="center" >
+                <p>
                     Notre bonheur consiste a  partager avec vous du bon fromage. On compte aujourd'huie plus de 10 ans damour et de passions pour le fromage,
                     on vous a egalement concoctes des recettes incontournables préparées avec nos deliceux fromages.
                     <br>
-                    </p>                   
-                </aside>
-                <img src="IbarissenThaghat.jpg" class="center" >
-                <p>Pour tout renseignement, ou commande, veuillez nous Contacter au 07 77 77 77 77</p>
+                </p>  
+                <p>    Pour tout renseignement, ou commande, veuillez nous Contacter au 07 77 77 77 77
+                </p>
                 
             </div>
         </main>
